--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">EvenTZ</string>
     <string name="test_title">This is my title</string>
+    <string name="details_image">detailsImageContainer</string>
 </resources>
