--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="followedEvents">Following</string>
     <string name="sortByDistance">Sort by distance</string>
     <string name="sortByTime">Sort by time</string>
+
     <string name="create_image_chooser_tittle">Choose App</string>
     <string name="toast_no_image_picking_app">No app for image picking</string>
+    <string name="shared_preferences">shared preferences</string>
+
 </resources>
